Revise setup instructions in README.md
Updated program setup instructions and added steps for Maven and JavaFX configuration.